add : 프론트엔드 백엔드 연결

--- a/index copy 2.html
+++ b/index copy 2.html
@@ -14,27 +14,16 @@
     <!-- Header -->
     <header>
       <div class="logo-container">
-        <img src="image/logo.png" alt="로고" class="logo-image" />
+        <img src="image.jepg" alt="로고" class="logo-image" />
         <div>
           <h1 class="site-title">들어와라, 내땅에</h1>
           <p class="site-subtitle">comeon, my ground</p>
         </div>
       </div>
       <nav class="nav-menu">
-        <nav class="nav-menu">
-          <a href="post_main.html" class="btn btn-primary">문의</a>
-          <a href="login.html" class="btn btn-primary">로그인</a>
-          <!-- 버튼 역할을 하는 링크 -->
-
-          <a href="signup.html" class="btn btn-outline">회원가입</a>
-          <!-- 회원가입 버튼도 링크로 변경 -->
-        </nav>
+        <button class="btn btn-primary">로그인</button>
+        <button class="btn btn-outline">회원가입</button>
       </nav>
-
-      <!-- 로그인 버튼이 클릭되면 로그인 페이지로 이동 -->
-      <!-- <a href="post_main.html" class="nav-btn inquiry">문의</a>
-      <a href="mypage.html" class="nav-btn my-info">내정보</a>
-      <a href="logout_index.html" class="nav-btn logout">로그아웃</a> -->
     </header>
 
     <!-- Main Content -->
@@ -239,32 +228,14 @@
               <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
               <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
             </svg>
-
-            <a href="https://www.notion.so" target="_blank">
-              <svg
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <rect
-                  x="2"
-                  y="2"
-                  width="20"
-                  height="20"
-                  rx="3"
-                  ry="3"
-                  stroke="black"
-                  stroke-width="2"
-                  fill="white"
-                />
-                <path d="M6 7H18V17H6V7Z" stroke="black" stroke-width="2" />
-                <path d="M8 10H16" stroke="black" stroke-width="2" />
-                <path d="M8 13H16" stroke="black" stroke-width="2" />
-                <path d="M8 16H12" stroke="black" stroke-width="2" />
-              </svg>
-            </a>
+            <div
+              style="
+                width: 20px;
+                height: 20px;
+                background-color: #e5e7eb;
+                border-radius: 4px;
+              "
+            ></div>
           </div>
         </div>
 
