--- a/mypage.html
+++ b/mypage.html
@@ -11,12 +11,11 @@
       <!-- Header -->
       <header class="header">
         <div class="nav-left">
-          <a href="#" class="nav-link">Home</a>
-          <a href="#" class="nav-link">문의</a>
+          <a href="index.html" class="nav-link">Home</a>
+          <a href="post_main.html" class="nav-link">문의</a>
         </div>
         <div class="nav-right">
-          <a href="#" class="nav-button profile-active">내정보</a>
-          <a href="#" class="nav-button">로그아웃</a>
+          <a href="index.html" class="nav-button">로그아웃</a>
         </div>
       </header>
 
@@ -26,7 +25,7 @@
         <div class="section">
           <div class="section-header">
             <h2 class="section-title">내정보</h2>
-            <button class="edit-button">편집수정</button>
+            <a href="mypage_edit.html" class="nav-button">편집수정</a>
           </div>
         </div>
 
@@ -90,7 +89,7 @@
           <h3 class="subsection-title">계정 관리</h3>
 
           <div class="account-actions">
-            <button class="delete-button">회원탈퇴</button>
+            <a href="index.html" class="delete-button">회원탈퇴</a>
           </div>
         </div>
       </main>
