--- a/mypage_edit.html
+++ b/mypage_edit.html
@@ -11,12 +11,11 @@
       <!-- Header -->
       <header class="header">
         <div class="nav-left">
-          <a href="#" class="nav-link">Home</a>
-          <a href="#" class="nav-link">문의</a>
+          <a href="index.html" class="nav-link">Home</a>
+          <a href="post_main.html" class="nav-link">문의</a>
         </div>
         <div class="nav-right">
-          <a href="#" class="nav-button profile-active">내정보</a>
-          <a href="#" class="nav-button">로그아웃</a>
+          <a href="index.html" class="nav-button">로그아웃</a>
         </div>
       </header>
 
@@ -87,13 +86,14 @@
 
           <!-- Form Actions -->
           <div class="form-actions">
-            <button type="submit" class="save-button">회원정보저장</button>
-            <button type="button" class="cancel-button">취소</button>
+            <a href="index.html" class="nav-button profile-active">회원정보저장</button>
+              <a href="mypage.html" class="nav-button profile-active">취소</a>
+
           </div>
         </form>
       </main>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/mypage_edit.js"></script>
   </body>
 </html>
