--- a/login.html
+++ b/login.html
@@ -4,24 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로그인 페이지</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/login.css" />
   </head>
   <body>
     <div class="container">
       <!-- Header -->
-      <header class="header">
-        <div class="nav-left">
-          <a href="#" class="nav-link">문의</a>
-        </div>
-        <div class="nav-right">
-          <a href="#" class="nav-button login-active">로그인</a>
-          <a href="#" class="nav-button">회원가입</a>
-        </div>
       </header>
 
       <!-- Main Content -->
       <main class="main-content">
-        <h1 class="login-title">로그인</h1>
+        <h1 class="login-
+        title">로그인</h1>
 
         <form class="login-form">
           <div class="form-group">
@@ -35,7 +28,7 @@
           </div>
 
           <div class="form-links">
-            <a href="#" class="form-link">회원가입</a>
+            <a href="signup.html" class="form-link">회원가입</a>
             <a href="#" class="form-link">아이디찾기</a>
             <a href="#" class="form-link">비밀번호찾기</a>
           </div>
@@ -48,11 +41,13 @@
             </label>
           </div>
 
-          <button type="submit" class="login-button">로그인</button>
+          <a href="index.html">
+            <button type="button" class="login-button">로그인</button>
+          </a>
         </form>
       </main>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/login.js"></script>
   </body>
 </html>
