add: 로그인,회원가입,프로필조회 완료

--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+ <header>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +14,7 @@
 
       <!-- Main Content -->
       <main class="main-content">
-        <h1 class="login-
+        <h1> <class="login-
         title">로그인</h1>
 
         <form class="login-form">
@@ -42,7 +43,7 @@
           </div>
 
           <a href="index.html">
-            <button type="button" class="login-button">로그인</button>
+            <button type="submit class="login-button">로그인</button>
           </a>
         </form>
       </main>
