--- a/mypage_edit.html
+++ b/mypage_edit.html
@@ -86,9 +86,10 @@
 
           <!-- Form Actions -->
           <div class="form-actions">
-            <a href="index.html" class="nav-button profile-active">회원정보저장</button>
-              <a href="mypage.html" class="nav-button profile-active">취소</a>
-
+            <button type="submit" class="nav-button profile-active">
+              회원정보저장
+            </button>
+            <a href="mypage.html" class="nav-button profile-active">취소</a>
           </div>
         </form>
       </main>
