--- a/post_edit.html
+++ b/post_edit.html
@@ -47,6 +47,6 @@
       </main>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/post_edit.js"></script>
   </body>
 </html>
