--- a/index.html
+++ b/index.html
@@ -23,11 +23,20 @@
       <nav class="nav-menu">
         <nav class="nav-menu">
           <a href="post_main.html" class="btn btn-primary">문의</a>
-          <a href="login.html" class="btn btn-primary">로그인</a>
+          <a href="login.html" class="btn btn-primary login-btn">로그인</a>
           <!-- 버튼 역할을 하는 링크 -->
 
-          <a href="signup.html" class="btn btn-outline">회원가입</a>
+          <a href="signup.html" class="btn btn-outline signup-btn">회원가입</a>
           <!-- 회원가입 버튼도 링크로 변경 -->
+          <a
+            href="mypage.html"
+            class="nav-link profile-btn"
+            style="display: none"
+            >내 정보</a
+          >
+          <a href="#" class="nav-link logout-btn" style="display: none"
+            >로그아웃</a
+          >
         </nav>
       </nav>
 
@@ -274,6 +283,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
