--- a/post_main.html
+++ b/post_main.html
@@ -14,8 +14,8 @@
           <a href="#" class="nav-link active">문의</a>
         </div>
         <div class="nav-right">
-          <a href="#" class="nav-button">내정보</a>
-          <a href="#" class="nav-button">로그아웃</a>
+          <a href="mypage.html" class="nav-button mypage-btn">내정보</a>
+          <a href="index.html" class="nav-button logout-btn">로그아웃</a>
         </div>
       </header>
 
@@ -100,6 +100,6 @@
       </main>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/post_main.js"></script>
   </body>
 </html>
