add 마이페이시 수정 및 포스트 연결완료

--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
           </div>
 
           <a href="index.html">
-            <button type="submit class="login-button">로그인</button>
+            <button type="submit" class=login-button">로그인</button>
           </a>
         </form>
       </main>
