--- a/mypage.html
+++ b/mypage.html
@@ -10,12 +10,8 @@
     <div class="container">
       <!-- Header -->
       <header class="header">
-        <div class="nav-left">
-          <a href="index.html" class="nav-link">Home</a>
-          <a href="post_main.html" class="nav-link">문의</a>
-        </div>
         <div class="nav-right">
-          <a href="index.html" class="nav-button">로그아웃</a>
+          <a href="#" class="nav-button logout-btn">로그아웃</a>
         </div>
       </header>
 
@@ -25,7 +21,7 @@
         <div class="section">
           <div class="section-header">
             <h2 class="section-title">내정보</h2>
-            <button class="nav-button edit-button">편집수정</button>
+            <a href="mypage_edit.html" class="nav-button edit-button">수정</a>
           </div>
         </div>
 
@@ -134,6 +130,17 @@
           alert("서버 오류로 사용자 정보를 불러올 수 없습니다.");
         }
       });
+      document
+        .querySelector(".logout-btn")
+        .addEventListener("click", function (e) {
+          e.preventDefault();
+
+          // 토큰 제거
+          localStorage.removeItem("token");
+
+          // index.html로 이동
+          window.location.href = "index.html";
+        });
     </script>
 
     <script src="js/mypage.js"></script>
