--- a/signup.html
+++ b/signup.html
@@ -20,11 +20,11 @@
       <main class="main-content">
         <h1 class="signup-title">회원가입</h1>
 
-        <form class="signup-form">
-          <div class="form-group">
-            <label for="username">ID</label>
-            <input type="text" id="username" name="username" required />
-          </div>
+        <div class="form-group">
+          <label for="username">아이디</label>
+          <input type="text" id="username" name="username" />
+          <button type="button" id="check-username-btn">중복확인</button> <!-- ✅ 중복확인 버튼 -->
+        </div>
         
           <div class="form-group">
             <label for="email">이메일주소</label>
