add:로그인,회원가입,mypage,mypage_edit,post,post_edit 수정완료

--- a/mypage.html
+++ b/mypage.html
@@ -11,7 +11,8 @@
       <!-- Header -->
       <header class="header">
         <div class="nav-right">
-          <a href="#" class="nav-button logout-btn">로그아웃</a>
+          <a href="index.html" class="nav-button">처음화면으로</a>
+          <!-- ✅ 이 줄 추가 -->
         </div>
       </header>
 
@@ -33,7 +34,7 @@
             <div class="info-row">
               <div class="info-item">
                 <div class="info-label">이름</div>
-                <div class="info-value" data-field="username"></div>
+                <div class="info-value" data-field="first_name"></div>
               </div>
               <div class="info-item">
                 <div class="info-label">E-mail</div>
@@ -69,10 +70,6 @@
               <div class="info-item">
                 <div class="info-label">보유 장비 현황</div>
                 <div class="info-value" data-field="equipment"></div>
-              </div>
-              <div class="info-item">
-                <div class="info-label">필지수</div>
-                <div class="info-value" data-key="land_count"></div>
               </div>
             </div>
           </div>
