--- a/post_main.html
+++ b/post_main.html
@@ -11,7 +11,8 @@
       <!-- Header -->
       <header class="header">
         <div class="nav-left">
-          <a href="#" class="nav-link active">문의</a>
+          <a href="index.html" class="nav-button">처음화면으로</a>
+          <!-- ✅ 이 줄 추가 -->
         </div>
         <div class="nav-right">
           <a href="mypage.html" class="nav-button mypage-btn">내정보</a>
