fix: 토양조회 외 모든기능 구현완료

--- a/3번째.html
+++ b/3번째.html
@@ -9,7 +9,6 @@
   <body>
     <div class="container">
       <!-- Page Title -->
-      <div class="page-title">키우기 어려운 작물들은 경고문구 추가</div>
 
       <!-- Header -->
       <header class="header">
@@ -24,12 +23,6 @@
             <h1 class="site-title">들어와라, 내땅에</h1>
             <span class="site-subtitle">comeon, my ground</span>
           </div>
-        </div>
-
-        <div class="nav-buttons">
-          <a href="#" class="nav-btn inquiry">문의</a>
-          <a href="#" class="nav-btn my-info">내정보</a>
-          <a href="#" class="nav-btn logout">로그아웃</a>
         </div>
       </header>
 
@@ -111,151 +104,13 @@
             </table>
           </div>
         </section>
-
-        <!-- Crop Calendar Section -->
-        <section class="calendar-section">
-          <p class="calendar-title">생육과정(주요농작업)</p>
-
-          <div class="crop-calendar">
-            <div class="months-row">
-              <div class="month">1월</div>
-              <div class="month">2월</div>
-              <div class="month">3월</div>
-              <div class="month">4월</div>
-              <div class="month">5월</div>
-              <div class="month">6월</div>
-              <div class="month">7월</div>
-              <div class="month">8월</div>
-              <div class="month">9월</div>
-              <div class="month">10월</div>
-              <div class="month">11월</div>
-              <div class="month">12월</div>
-            </div>
-
-            <div class="calendar-grid">
-              <!-- Row 1 -->
-              <div class="calendar-cell">
-                <div class="cell-content">씨마늘 ▶</div>
-              </div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell">
-                <div class="cell-content">기르마늘 ▶</div>
-              </div>
-              <div class="calendar-cell"></div>
-
-              <!-- Row 2 -->
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell">
-                <div class="cell-content">파종기</div>
-              </div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell">
-                <div class="cell-content">출하기</div>
-              </div>
-              <div class="calendar-cell"></div>
-
-              <!-- Row 3 -->
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell">
-                <div class="cell-content">씨감 준비/ 싹키우기 모기름</div>
-              </div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell">
-                <div class="cell-content">씨감 준비/ 싹키우기</div>
-              </div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-
-              <!-- Row 4 -->
-              <div class="calendar-cell">
-                <div class="cell-content">어린싹 싹기</div>
-              </div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell">
-                <div class="cell-content">수확</div>
-              </div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell">
-                <div class="cell-content">어린싹 싹기</div>
-              </div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell">
-                <div class="cell-content">수확</div>
-              </div>
-
-              <!-- Row 5 -->
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell">
-                <div class="cell-content">
-                  싹마늘, 물주기, 배추, 물주기, 배추
-                </div>
-              </div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell">
-                <div class="cell-content">
-                  마늘심기, 물주기, 싹마늘, 물주기, 배추
-                </div>
-              </div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell">
-                <div class="cell-content">저장</div>
-              </div>
-
-              <!-- Row 6 -->
-              <div class="calendar-cell">
-                <div class="cell-content">파종일</div>
-              </div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell">
-                <div class="cell-content">파종일</div>
-              </div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-              <div class="calendar-cell"></div>
-            </div>
-          </div>
-        </section>
+        <iframe
+          src="https://www.nongsaro.go.kr/portal/ps/psb/psbl/workScheduleDtl.ps?menuId=PS00087&cntntsNo=30699&sKidofcomdtySeCode=FC01"
+          width="1000"
+          height="2000"
+        ></iframe>
       </main>
-    </div>
-
-    <script src="script.js"></script>
+      
+    <script src="js/3번째.js"></script>
   </body>
 </html>
