--- a/mypage.html
+++ b/mypage.html
@@ -104,7 +104,7 @@
 
           if (response.ok) {
             const mapping = {
-              username: data.username,
+              first_name: data.first_name,
               email: data.email,
               birthdate: data.birthdate,
               region: data.region,
