--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
             <input
               type="text"
               class="search-input"
-              value="도로명 예시 : 전북특별자치도 은하군 홍길동 서린 579"
               placeholder="지번 예시 : 경북특별자치도 은하군 홍길동 특정리 555"
             />
             <button class="search-button">
@@ -180,6 +179,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/index.js"></script>
+    <script src="../js/index.js"></script>
   </body>
 </html>
