--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <!------------------------------------------------------------------------------------------------------->
+  <!-- head -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,8 +12,13 @@
     />
     <link rel="stylesheet" href="css/index.css" />
   </head>
+  
+  <!------------------------------------------------------------------------------------------------------->
+  <!-- body -->
   <body>
+    <!------------------------------------------------------------------------------------------------------->
     <!-- Header -->
+    <!-- 네이게이션 바? -->
     <header>
       <div class="logo-container">
         <img src="image/logo.png" alt="로고" class="logo-image" />
@@ -46,6 +53,7 @@
       <a href="logout_index.html" class="nav-btn logout">로그아웃</a> -->
     </header>
 
+    <!------------------------------------------------------------------------------------------------------->
     <!-- Main Content -->
     <main>
       <div class="background"></div>
@@ -53,6 +61,7 @@
         <h2 class="search-title">주소검색</h2>
 
         <div class="search-box">
+          
           <!-- Search Bar -->
           <div class="search-bar">
             <div class="search-type">
@@ -62,13 +71,18 @@
                 <option>도로명</option>
               </select>
             </div>
+
+            <!-- input address -->
+            <!-- input tag 안에 value 값 지정하면 안되는거 같음. 지우니까 JS에서 값 받아와짐 -->
             <input
               type="text"
+              id="input_text_search"
               class="search-input"
-              value="도로명 예시 : 전북특별자치도 은하군 홍길동 서린 579"
               placeholder="지번 예시 : 경북특별자치도 은하군 홍길동 특정리 555"
             />
-            <button class="search-button">
+
+            <!-- search button -->
+            <button id="search_button_01" class="search_button" >
               <svg
                 class="search-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -116,6 +130,7 @@
               </div>
 
               <div class="hourly-forecast">
+
                 <!-- Generate 7 hour items -->
                 <div class="hour-item">
                   <span class="hour">9</span>
@@ -158,6 +173,7 @@
             <!-- Calendar -->
             <div class="calendar">
               <div class="calendar-grid">
+                
                 <!-- Day names -->
                 <div class="day-name">일</div>
                 <div class="day-name">월</div>
