--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <!------------------------------------------------------------------------------------------------------->
+
+  <!--===================================================================================================-->
   <!-- head -->
   <head>
     <meta charset="UTF-8" />
@@ -13,12 +14,12 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   
-  <!------------------------------------------------------------------------------------------------------->
+  <!--===================================================================================================-->
   <!-- body -->
   <body>
+    
     <!------------------------------------------------------------------------------------------------------->
     <!-- Header -->
-    <!-- 네이게이션 바? -->
     <header>
       <div class="logo-container">
         <img src="image/logo.png" alt="로고" class="logo-image" />
@@ -222,6 +223,7 @@
       </div>
     </main>
 
+    <!------------------------------------------------------------------------------------------------------->
     <!-- Footer -->
     <footer>
       <div class="footer-container">
@@ -299,6 +301,9 @@
         </div>
       </div>
     </footer>
+
+    <!--===================================================================================================-->
+    <!-- script -->
     <script src="js/index.js"></script>
   </body>
 </html>
