--- a/03_crop_mate.html
+++ b/03_crop_mate.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>들어와라, 내땅에 - 작물 분석</title>
-    <link rel="stylesheet" href="css/3번째.css" />
+    <link rel="stylesheet" href="css/03_crop_mate.css" />
   </head>
   <body>
     <div class="container">
@@ -256,6 +256,6 @@
       </main>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/03_crop_mate.js"></script>
   </body>
 </html>
