--- a/03_crop_mate.html
+++ b/03_crop_mate.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
+
+  <!--===================================================================================================-->
+  <!-- head -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>들어와라, 내땅에 - 작물 분석</title>
     <link rel="stylesheet" href="css/03_crop_mate.css" />
   </head>
+
+  <!--===================================================================================================-->
+  <!-- body -->
   <body>
     <div class="container">
       <!-- Page Title -->
       <div class="page-title">키우기 어려운 작물들은 경고문구 추가</div>
 
+      <!------------------------------------------------------------------------------------------------------->
       <!-- Header -->
       <header class="header">
         <div class="logo-container">
@@ -33,6 +40,7 @@
         </div>
       </header>
 
+      <!------------------------------------------------------------------------------------------------------->
       <!-- Main Content -->
       <main class="main-content">
         <!-- Background Curves -->
@@ -112,6 +120,7 @@
           </div>
         </section>
 
+        <!------------------------------------------------------------------------------------------------------->
         <!-- Crop Calendar Section -->
         <section class="calendar-section">
           <p class="calendar-title">생육과정(주요농작업)</p>
@@ -256,6 +265,8 @@
       </main>
     </div>
 
+    <!--===================================================================================================-->
+    <!-- script -->
     <script src="js/03_crop_mate.js"></script>
   </body>
 </html>
