✅ Add reason text
작물 추천 이유를 화면에 보여줄 코드 추가

--- a/02_crop_recommendation.html
+++ b/02_crop_recommendation.html
@@ -96,18 +96,18 @@
         <!-- Crop Buttons -->
         <div class="crop-buttons-container">
           <div class="crop-row">
-            <button id="btn_crop_01" class="crop-btn" data-crop="potato">추천 작물 1</button>
-            <!-- text box 추가 -->
+            <button id="btn_crop_01" class="crop-btn">작물 1</button>
+            <p id="p_crop_01" class="p_crop"> reason </p>
           </div>
 
           <div class="crop-row">
-            <button id="btn_crop_02" class="crop-btn" data-crop="ginger">추천 작물 2</button>
-            <!-- text box 추가 -->
+            <button id="btn_crop_02" class="crop-btn">작물 2</button>
+            <p id="p_crop_02" class="p_crop"> reason </p>
           </div>
 
           <div class="crop-row">
-            <button id="btn_crop_03" class="crop-btn" data-crop="garlic">추천 작물 3</button>
-            <!-- text box 추가 -->
+            <button id="btn_crop_03" class="crop-btn">작물 3</button>
+            <p id="p_crop_03" class="p_crop"> reason </p>
           </div>
         </div>
 
