--- a/login.html
+++ b/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
- <header>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,8 +9,9 @@
   <body>
     <div class="container">
       <!-- Header -->
-      </header>
-
+      <div class="logo-container">
+        <img src="image/무제-1.png" alt="로고" class="logo-image" />
+      </div>
       <!-- Main Content -->
       <main class="main-content">
         <h1> <class="login-
@@ -33,17 +33,10 @@
             <a href="#" class="form-link">아이디찾기</a>
             <a href="#" class="form-link">비밀번호찾기</a>
           </div>
-
-          <div class="auto-login">
-            <label class="auto-login-label">
-              <input type="checkbox" id="auto-login" name="auto-login" />
-              <span class="checkbox-custom"></span>
-              자동로그인 설정
-            </label>
-          </div>
+        
 
           <a href="index.html">
-            <button type="submit" class=login-button">로그인</button>
+            <button type="submit" class="login-button">로그인</button>
           </a>
         </form>
       </main>
